stripped bootstrap + google fonts API; styling & refactoring

--- a/Energy.App.Standalone/ClientSide/AttributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
+++ b/Energy.App.Standalone/ClientSide/AttributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <div class="eme--license-attribution-header--root">
     <h1>License &amp; Attributions</h1>
     <p>This file contains:</p>
@@ -62,8 +63,5 @@
     <h4>Explain My Energy is licensed <span class="eme--license-type">{{emeLicenseType}}</span>:</h4>
     <pre class="eme--license-text">{{emeFullLicenseText}}</pre>
 
-    <style>
-
-    </style>
 
 </div>
