--- a/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
@@ -6,7 +6,7 @@
 
 @if (_ready)
 {
-    <div id="profile-chart-meter-@MeterGlobalId" style="width: 100%; height: 500px; max-width: 100%">
+    <div id="profile-chart-meter-@MeterGlobalId" class="profile-chart-meter">
     </div>
 }
 
