--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -60,7 +60,7 @@
                 </MudRadioGroup>
 
             </MudCardContent>
-            <MudCardActions Class="d-flex flex-column align-items-start ">
+            <MudCardActions Class="d-flex flex-column align-start ">
                 <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Size="Size.Medium" Color="Color.Primary">@_saveButtonText</MudButton>
 
                 <MudText Class="mt-3 fw-bold" Color="Color.Success" hidden="@(!_submitSuccessful)">
