--- a/Energy.App.Standalone/Features/Setup/SetupPage.razor
+++ b/Energy.App.Standalone/Features/Setup/SetupPage.razor
@@ -10,7 +10,7 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
-        <div class="d-flex justify-content-end align-baseline">
+        <div class="d-flex justify-end align-baseline">
             <MudText Typo="Typo.h4" Align="Align.Center" Class="mt-3 mx-auto eme-focus">App Setup</MudText>
             <MudIconButton Class="ma-0"
                            ButtonType="ButtonType.Button"
