--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -13,7 +13,7 @@
             </WizardModal>
         </MudItem>
         <MudItem xs="12">
-            <MudPaper Elevation="0" Class="p-2 mt-3 d-flex justify-content-end align-baseline">
+            <MudPaper Elevation="0" Class="p-2 mt-3 d-flex justify-end align-baseline">
                 <MudText Typo="Typo.h4" Align="Align.Center" Class="mx-auto eme-focus">Welcome to Explain My Energy</MudText>
 
                 <MudButton Class="ma-0"
