--- a/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
@@ -11,16 +11,16 @@
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound" >@ForecastAnalysis.ForecastCostPounds</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon" >@ForecastAnalysis.ForecastConsumption kWh</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica" >@ForecastAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
+            <MudChip Class="info-chip" Icon="@Icons.Material.Filled.CurrencyPound" >@ForecastAnalysis.ForecastCostPounds</MudChip>
+            <MudChip Class="info-chip" Icon="@_consumptionIcon" >@ForecastAnalysis.ForecastConsumption kWh</MudChip>
+            <MudChip Class="info-chip" Icon="@Icons.Material.Filled.SouthAmerica" >@ForecastAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
 
         </MudPaper>
         <MudDivider  DividerType="DividerType.Middle"></MudDivider>
         @if (PrimaryHeatSource)
         {
             <MudPaper Class="my-2 d-flex justify-center" Elevation="0">
-
+                @* TODO *@
                 <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@ForecastAnalysis.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
 
             </MudPaper>
