--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
@@ -19,7 +19,7 @@
                            Variant="Variant.Outlined"
                            EndIcon="fa-solid fa-arrow-right"
                            Color="Color.Default"
-                           Style="@(CanMoveNext ? "display: none" : "")"
+                           Class="@(CanMoveNext ? "d-none" : "")"
                            OnClick="SkipToDone">
                     Skip
                 </MudButton>
