--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/GasMeterStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/GasMeterStep.razor
@@ -20,7 +20,7 @@
                     Variant="Variant.Outlined"
                     EndIcon="fa-solid fa-arrow-right"
                     Color="Color.Default"
-                    Style="@(CanMoveNext ? "display: none" : "")"
+                    Class="@(CanMoveNext ? "d-none" : "")"
                     OnClick="SkipToElectricity">
                     Skip to Electricity
                 </MudButton>
