elimation of nearly all inline styles; fixes

--- a/Energy.App.Standalone/Features/Analysis/Toolbar.razor
+++ b/Energy.App.Standalone/Features/Analysis/Toolbar.razor
@@ -20,7 +20,7 @@
     <MudPaper Elevation="0" Class="term-mud-select-min-width ma-2">
         <MudTooltip Placement="Placement.Top" Text="Show the analyses below as Day, Week or Month periods">
 
-            <MudSelect  Class="w-100"
+            <MudSelect  Class="w-100percent"
                        Value="_calendarTerm"
                        ValueChanged="TermChanged"
                        Label="Change Term"
@@ -61,8 +61,7 @@
                                  Min="-50"
                                  Format="+#;-#;0"
                                  AdornmentAriaLabel="Degrees Celsius"
-                                 Class="right-align-input"
-                                 Style="width: 150px;"
+                                 Class="right-align-input w-150px"
                                  T="decimal"
                                  Label="Adjust Forecast" Variant="Variant.Text"
                                  Step="1"
