--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/EditTariffForm.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/EditTariffForm.razor
@@ -23,9 +23,9 @@
     <MudPaper Elevation="0" Class="p-0">
         @if (!_tariffDetail.IsHourOfDayFixed)
         {
-            <MudText Style="margin-left: 10px;" Typo="Typo.caption">Hourly Rates*</MudText>
+            <MudText Class="ml-3" Typo="Typo.caption">Hourly Rates*</MudText>
 
-            <MudSimpleTable Dense="true" FixedHeader="true" Style="height: 400px;" Square="true" Outlined="true" Striped="true" Elevation="0" Class="">
+            <MudSimpleTable Dense="true" FixedHeader="true"  Square="true" Outlined="true" Striped="true" Elevation="0" Class="h-400px">
                 <thead>
                     <MudTr>
                         <MudTh>Hour</MudTh>
