--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
@@ -9,7 +9,7 @@
         <MudCardHeader>
             <MudText Typo="Typo.h6">@MeterType Meter Authorization</MudText>
         </MudCardHeader>
-        <MudCardContent Class="h-100">
+        <MudCardContent Class="h-100percent">
 
             <div class="mb-1">
 
