--- a/Energy.App.Standalone/Shared/NavMenu.razor
+++ b/Energy.App.Standalone/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 <MudPaper Class="py-0" Elevation="0">
     <MudNavMenu Color="Color.Info" Bordered="true" Class="d-flex flex-column">
 
-        <MudTooltip Text="@(!HouseholdSetupValid ? "Setup required" : "")" Placement="Placement.Right" RootStyle="width: inherit;">
+        <MudTooltip Text="@(!HouseholdSetupValid ? "Setup required" : "")" Placement="Placement.Right" RootClass="w-Inherit">
 
             <MudNavLink Href="/Setup"  Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" ActiveClass="active-navbar-item">
 
@@ -20,30 +20,25 @@
         </MudTooltip>
         <MudDivider></MudDivider>
 
-        <MudTooltip Text="@ElectricityTooltipText()" Placement="Placement.Right" RootStyle="width: inherit;">
+        <MudTooltip Text="@ElectricityTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
             <MudNavLink Disabled="ElectricityDisabled"  Class="navbar-nav-item" Href="@ElectricityHref" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ElectricBolt" ActiveClass="active-navbar-item">
                 <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsElectricity ? Icons.Material.Filled.LocalFireDepartment : "")">Electricity</NavMenuNavLinkContent>
             </MudNavLink>
         </MudTooltip>
-        <MudTooltip Text="@GasTooltipText()" Placement="Placement.Right" RootStyle="width: inherit;">
-            <MudNavLink Disabled="GasDisabled" Class="navbar-nav-item" Href="@GasHref" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalFireDepartment" ActiveClass="active-navbar-item">
+        <MudTooltip Text="@GasTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
+            <MudNavLink 
+                    Disabled="GasDisabled" 
+                    Class="navbar-nav-item" 
+                    Href="@GasHref" 
+                    Match="NavLinkMatch.Prefix"
+                    Icon="@Icons.Material.Filled.LocalFireDepartment" 
+                    ActiveClass="active-navbar-item">
                 <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsGas ? Icons.Material.Filled.LocalFireDepartment : "")">Gas</NavMenuNavLinkContent>
 
             </MudNavLink>
         </MudTooltip>
     </MudNavMenu>
 </MudPaper>
-
-<style>
-
-    .navbar-nav-item a {
-        text-decoration: none;
-    }
-
-    .active-navbar-item {
-        background-color: lightgrey
-    }
-</style>
 
 @code {
 
