--- a/Energy.App.Standalone/wwwroot/css/app.css
+++ b/Energy.App.Standalone/wwwroot/css/app.css
@@ -1,4 +1,3 @@
-/*@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');*/
 @font-face {
   font-family: "Open Sans";
   src: url("OpenSans-Regular.woff2") format("woff2"), url("OpenSans-Regular.woff") format("woff");
@@ -13,7 +12,8 @@
   font-style: italic;
   font-display: swap;
 }
-html, body {
+html,
+body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -150,13 +150,14 @@ h1:focus {
     transform: rotate(360deg);
   }
 }
+/* helpers */
 .info-chip {
   pointer-events: none;
   background-color: transparent;
 }
 
 .background-inherit {
-  background-color: inherit;
+  background-color: inherit !important;
 }
 
 .fw-bold {
@@ -168,19 +169,31 @@ h1:focus {
 }
 
 .h-fit-content {
-  height: fit-content;
+  height: fit-content !important;
 }
 
 .over-auto {
-  overflow: auto;
+  overflow: auto !important;
 }
 
-.h-100 {
-  height: 100%;
+.h-100percent {
+  height: 100% !important;
 }
 
-.w-100 {
-  width: 100%;
+.h-400px {
+  height: 400px !important;
+}
+
+.w-100percent {
+  width: 100% !important;
+}
+
+.w-150px {
+  width: 150px !important;
+}
+
+.w-Inherit {
+  width: inherit !important;
 }
 
 .right-align-input input {
@@ -189,6 +202,36 @@ h1:focus {
 
 .term-mud-select-min-width .mud-select {
   min-width: 100px;
+}
+
+.welcome-screen-content ul {
+  list-style: disc;
+}
+.welcome-screen-content ul li {
+  margin: 1rem 1rem;
+}
+.welcome-screen-content p {
+  margin: 0.5rem 0;
+}
+
+.navbar-nav-item a {
+  text-decoration: none;
+}
+
+.active-navbar-item {
+  background-color: lightgrey;
+}
+
+.share-menu .facebook-share .mud-list-item-icon {
+  color: #1877f2;
+  min-width: fit-content;
+}
+.share-menu .twitter-share .mud-list-item-icon {
+  min-width: fit-content;
+}
+.share-menu .linkedIn-share .mud-list-item-icon {
+  color: #0a66c2;
+  min-width: fit-content;
 }
 
 /*# sourceMappingURL=app.css.map */
