--- a/Energy.App.Standalone/wwwroot/css/app.css
+++ b/Energy.App.Standalone/wwwroot/css/app.css
@@ -1,3 +1,4 @@
+/*@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');*/
 @font-face {
   font-family: "Open Sans";
   src: url("OpenSans-Regular.woff2") format("woff2"), url("OpenSans-Regular.woff") format("woff");
