--- a/Energy.App.Standalone/ClientSide/Sass/app.scss
+++ b/Energy.App.Standalone/ClientSide/Sass/app.scss
@@ -1,7 +1,7 @@
 /*@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');*/
 @font-face {
     font-family: 'Open Sans';
-    src: url('OpenSans-Regular.woff2') format('woff2'), url('OpenSans-Regular.woff') format('woff');
+    src: url('fonts/OpenSans-Regular.woff2') format('woff2'), url('fonts/OpenSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('OpenSans-Italic.woff2') format('woff2'), url('OpenSans-Italic.woff') format('woff');
+    src: url('fonts/OpenSans-Italic.woff2') format('woff2'), url('fonts/OpenSans-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
