--- a/Energy.App.Standalone/src/views/index_template.html
+++ b/Energy.App.Standalone/src/views/index_template.html
@@ -13,9 +13,11 @@
     <title>Explain My Energy</title>
 
     <base href="/" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <link rel="icon" href="../images/favicons/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../images/favicons/apple-touch-icon.png">
 
 
     <link rel="stylesheet" href="../scss/fontawesome/app-fontawesome.scss">
