json data working

--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -1,13 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-<head >
+<head prefix="<%= ogHeadPrefix %>">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="noindex">
+    <meta property='og:title' content='<%= ogTitle %>' />
+    <meta property='og:image' content='<%= ogImage %>' />
+    <meta property='og:description' content='<%= ogDescription %>' />
+    <meta property='og:url' content='<%= ogUrl %>' />
+    <meta property='og:type' content='<%= ogType %>' />
 
-
-    <title><%= title %></title>
+    <title>Explain My Energy</title>
 
     <base href="/" />
 
