--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -11,6 +11,8 @@
     <meta property='og:url' content='<%= ogUrl %>' />
     <meta property='og:type' content='<%= ogType %>' />
 
+    <link href="../data/manifest.json" rel="manifest" />
+
     <title>Explain My Energy</title>
 
     <base href="/" />
