License View generation

--- a/Energy.App.Standalone/src/attributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
+++ b/Energy.App.Standalone/src/attributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title> {{emeAppName}} - License &amp; Attributions</title>
-    <link href="{{emeAttribsCssDistPath}}" rel="stylesheet" />
+    <link href="{{emeAttribsCssPath}}" rel="stylesheet" />
 
 </head>
 <div class="eme--license-attribution-header--root">
