node credits and license building

--- a/Energy.App.Standalone/src/attributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
+++ b/Energy.App.Standalone/src/attributionAndLicensing/MainHeaderGeneration/EmeLicenseAndAttributionHeader.handlebars
@@ -6,6 +6,7 @@
     <link href="{{emeAttribsCssPath}}" rel="stylesheet" />
 
 </head>
+<body>
 <div class="eme--license-attribution-header--root">
     <h1>License &amp; Attributions</h1>
     <p>This file contains:</p>
@@ -79,3 +80,7 @@
 
 
 </div>
+{{> nugetCreditsPartial }}
+
+
+</body>
