--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -3,17 +3,24 @@
 
 <head prefix="<%= ogHeadPrefix %>">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex">
+
+    <title>Explain My Energy</title>
+
+    <meta name="description" content="<%= ogDescription %>" />
+
+    <meta name="color-scheme" content="only light" />
+
+    <link href="../data/manifest.json" rel="manifest" />
+
     <meta property='og:title' content='<%= ogTitle %>' />
     <meta property='og:image' content='<%= ogImage %>' />
     <meta property='og:description' content='<%= ogDescription %>' />
     <meta property='og:url' content='<%= ogUrl %>' />
     <meta property='og:type' content='<%= ogType %>' />
 
-    <link href="../data/manifest.json" rel="manifest" />
 
-    <title>Explain My Energy</title>
 
     <base href="/" />
 
