--- a/Energy.App.Standalone/src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGenerationTemplate.hbs
+++ b/Energy.App.Standalone/src/attributionAndLicensing/FinalCreditsDocGeneration/FinalCreditsDocGenerationTemplate.hbs
@@ -3,70 +3,76 @@
 <head>
     <meta charset="utf-8">
     <title> {{emeAppName}} - License &amp; Attributions</title>
-    <link href="{{emeAttribsCssPath}}" rel="stylesheet" />
+    <link href="../scss/app/attribs.scss" rel="stylesheet" />
 
 </head>
+
 <body>
-<div class="eme--license-attribution-header--root">
-    <h1>License &amp; Attributions</h1>
-    <p>This file contains:</p>
+    <div class="eme--license-attribution-header--root">
+        <h1>License &amp; Attributions</h1>
+        <p>This file contains:</p>
 
-    <ul>
-        <li>The Version, License &amp; Copyright details for the Explain My Energy application and source code</li>
-        <li>The Web APIs that make this app possible</li>
-        <li>Attribution &amp; License information for third-party software packages used by this application</li>
-    </ul>
-    
-    <h2 class="eme--name">Explain My Energy</h2>
-    <h3 class="eme--version">version {{emeFullVersion}}</h3>
-    <div class="eme--api-attribution--root">
-        <h4><strong>This app wouldn't function without the following APIs:</strong></h4>
         <ul>
-            <li>
-                <p>The free consumer API from made available by n3rgy @ <a href="https://www.n3rgy.com/consumer/">n3rgy
-                        Consumer Portal</a></p>
-            </li>
-            <li>
-                <p>Open-Meteo, an amazing and comprehensive weather API service @ <a
-                        href="https://open-meteo.com">open-meteo.com</a></p>
-                <div class="eme--api-attribution-detail">
-                    <p>Open-Meteo API Data is Licensed under the <code>CC-BY-4.0</code> <a
-                            href="https://creativecommons.org/licenses/by/4.0/legalcode">CC Attribution 4.0
-                            International</a></p>
-                </div>
-            </li>
-            <li>
-                <p><a href="https://postcodes.io">postcodes.io</a>, a great Open Data API for resolving UK postcodes.
-                    postcodes.io is licensed under <a
-                        href="https://github.com/ideal-postcodes/postcodes.io/blob/master/LICENSE">MIT</a> </p>
-                <div class="eme--api-attribution-detail">
-
-                    <p>Great Britain Postcode Data is licensed under the <code>Open Government License</code> <a
-                            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open
-                            Government Licence v3.0</a></p>
-                    <p>Northern Ireland Postcode Data (postcodes beginning with BT) is used non-commerically, as such
-                        also subject to the <code>Open Government License</code> <a
-                            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open
-                            Government Licence v3.0</a></p>
-                    <p>Contains Ordnance Survey data &copy; Crown copyright and database right 2023</p>
-                    <p>Contains Royal Mail data &copy; Royal Mail copyright and database right 2023</p>
-                    <p>Contains National Statistics data &copy; Crown copyright and database right 2023</p>
-                    <p>Contains NRS data &copy; Crown copyright and database right 2023 </p>
-                    <p>More information on Open Data Licensing for postcodes.io can be found <a
-                            href="https://ideal-postcodes.co.uk/guides/onspd-licensing">ideal-postcodes.co.uk/guides/onspd-licensing</a>
-                    </p>
-                </div>
-            </li>
+            <li>The Version, License &amp; Copyright details for the Explain My Energy application and source code</li>
+            <li>The Web APIs that make this app possible</li>
+            <li>Attribution &amp; License information for third-party software packages used by this application</li>
         </ul>
+
+        <h2 class="eme--name">Explain My Energy</h2>
+        <h3 class="eme--version">version {{emeFullVersion}}</h3>
+        <div class="eme--api-attribution--root">
+            <h4><strong>This app wouldn't function without the following APIs:</strong></h4>
+            <ul>
+                <li>
+                    <p>The free consumer API from made available by n3rgy @ <a
+                            href="https://www.n3rgy.com/consumer/">n3rgy
+                            Consumer Portal</a></p>
+                </li>
+                <li>
+                    <p>Open-Meteo, an amazing and comprehensive weather API service @ <a
+                            href="https://open-meteo.com">open-meteo.com</a></p>
+                    <div class="eme--api-attribution-detail">
+                        <p>Open-Meteo API Data is Licensed under the <code>CC-BY-4.0</code> <a
+                                href="https://creativecommons.org/licenses/by/4.0/legalcode">CC Attribution 4.0
+                                International</a></p>
+                    </div>
+                </li>
+                <li>
+                    <p><a href="https://postcodes.io">postcodes.io</a>, a great Open Data API for resolving UK
+                        postcodes.
+                        postcodes.io is licensed under <a
+                            href="https://github.com/ideal-postcodes/postcodes.io/blob/master/LICENSE">MIT</a> </p>
+                    <div class="eme--api-attribution-detail">
+
+                        <p>Great Britain Postcode Data is licensed under the <code>Open Government License</code> <a
+                                href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open
+                                Government Licence v3.0</a></p>
+                        <p>Northern Ireland Postcode Data (postcodes beginning with BT) is used non-commerically, as
+                            such
+                            also subject to the <code>Open Government License</code> <a
+                                href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open
+                                Government Licence v3.0</a></p>
+                        <p>Contains Ordnance Survey data &copy; Crown copyright and database right 2023</p>
+                        <p>Contains Royal Mail data &copy; Royal Mail copyright and database right 2023</p>
+                        <p>Contains National Statistics data &copy; Crown copyright and database right 2023</p>
+                        <p>Contains NRS data &copy; Crown copyright and database right 2023 </p>
+                        <p>More information on Open Data Licensing for postcodes.io can be found <a
+                                href="https://ideal-postcodes.co.uk/guides/onspd-licensing">ideal-postcodes.co.uk/guides/onspd-licensing</a>
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <h4>Explain My Energy is licensed <span class="eme--license-type">{{emeLicenseType}}</span>:</h4>
+        <pre class="eme--license-text">{{emeFullLicenseText}}</pre>
+
+
     </div>
-    <h4>Explain My Energy is licensed <span class="eme--license-type">{{emeLicenseType}}</span>:</h4>
-    <pre class="eme--license-text">{{emeFullLicenseText}}</pre>
-
-
-</div>
-
-{{> nugetCreditsPartial }}
-
-{{> npmCreditsPartial }}
+    <div>
+        {{> nugetCreditsPartial }}
+    </div>
+    <div>
+        {{> npmCreditsPartial }}
+    </div>
 
 </body>
